--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -816,6 +816,7 @@ input[type="submit"]:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap : 70px;
 }
 
 .channel-item {
